--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "sweetalert2": "^11.4.20",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
