--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "react_redux",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -12,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.20",
     "web-vitals": "^2.1.4"
   },
